# slam-eslam

./: .gitignore  CMakeLists.txt  eslam.pc.in  manifest.xml  particle_filter.pc.in
eslam/: CMakeLists.txt  Configuration.hpp  ContactModel.hpp  EmbodiedSlamFilter.cpp  EmbodiedSlamFilter.hpp  ExpectationMaximization.hpp  GaussianMixture.hpp  ParticleFilter.hpp  PoseEstimator.cpp  PoseEstimator.hpp  PoseParticle.hpp
src/: CMakeLists.txt  Configuration.hpp  ContactModel.cpp  ContactModel.hpp  ContactOdometry.cpp  ContactOdometry.hpp  EmbodiedSlamFilter.cpp  EmbodiedSlamFilter.hpp  GaussianMixture.hpp  ParticleFilter.hpp  PoseEstimator.cpp  PoseEstimator.hpp  PoseParticle.hpp  SurfaceHash.hpp
test/: CMakeLists.txt  GMMEM.cpp  UnitTest.cpp  testContactModel.cpp  testMap.cpp  testParticles.cpp  testWidget.cpp
test/map/: contact.conf  exp1.conf  res.plot
viz/: BodyContactStateVisualization.cpp  BodyContactStateVisualization.hpp  CMakeLists.txt  EslamWidget.cpp  EslamWidget.hpp  MapVizEventFilter.hpp  ParticleVisualization.cpp  ParticleVisualization.hpp  PluginLoader.cpp  eslam-viz.pc.in  vizkit_plugin.rb
